<resources>
    <string name="app_name">WeatherApp</string>
    <string name="view_weather">View Weather</string>
    <string name="degree_celsius_symbol">°C</string>
    <string name="description_weather_condition_icon">weather condition icon</string>
    <string name="label_humidity">Humidity</string>
    <string name="label_pressure">Pressure</string>
    <string name="label_visibility">Wind speed</string>
    <string name="label_direction">Wind direction</string>
    <string name="label_sunrise">Sunrise</string>
    <string name="label_sunset">Sunset</string>
    <string name="_7_0">7.0 С</string>
    <string name="novosibirsk">Novosibirsk</string>
    <string name="todo">TODO</string>
    <string name="overcast_clouds">Overcast clouds</string>
    <string name="_18_june_2019_1_13_pm">18 June, 2019 1:13 PM</string>
    <string name="detail">Detail</string>
    <string name="n">Первое слово\nВторое слово</string>
    <string name="sunset_time">Sunset time</string>
    <string name="_3">Ячейка 3</string>
    <string name="_4">Ячейка 4</string>
    <string name="wind_info">Wind info</string>
</resources>
