<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clear_day_bg">

    <TextView
        android:id="@+id/cityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/novosibirsk"
        android:textColor="@color/white"
        android:textSize="22sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="91dp"
        android:layout_height="83dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityTextView"
        app:srcCompat="@drawable/weather_icon_03d"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/currentWeatherTemperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7_0"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_weather_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/overcast_clouds"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_time" />

    <TextView
        android:id="@+id/tv_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/_18_june_2019_1_13_pm"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentWeatherTemperatureTextView" />

    <TableLayout
        android:id="@+id/myTableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/clear_day_bg_table"
        app:layout_constraintTop_toBottomOf="@+id/tv_weather_condition">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detail"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_sunrise2" />

            <TextView
                android:id="@+id/tv_sunrise_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/n"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#FFFFFF" />

            <ImageView
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_sunset2" />

            <TextView
                android:id="@+id/tv_sunset_time"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sunset_time"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF" />
        </TableRow>

        <TableRow android:layout_height="48dp">

            <ImageView
                android:layout_width="61dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_uv_index_max" />

            <TextView
                android:id="@+id/uv_index"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#FFFFFF" />

            <ImageView
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_rain" />


            <TextView
                android:id="@+id/rain_sum"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/myTableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/clear_day_bg_table"
        app:layout_constraintTop_toBottomOf="@+id/myTableLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wind_info"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_windmill_blade" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#FFFFFF" />


            <TextView
                android:id="@+id/currentWeatherWindSpeedTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/label_visibility"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/currentWeatherWindDirectionTextView"
                android:layout_width="10dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/label_direction"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>